PROJECT(train)
set(MAIN_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(MAIN_INCLUDE_DIR ${MAIN_SRC_DIR}/include)
set(MAIN_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${MAIN_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${MAIN_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MAIN_BINARY_DIR}/bin)


SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g " )
SET( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g " )
INCLUDE_DIRECTORIES(${MAIN_INCLUDE_DIR})
ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(basic)

