#add_executable(lineEdit lineEdit.c)
#target_link_libraries(lineEdit utils)

#add_executable(parenthesesMatch parenthesesMatching.c)
#target_link_libraries(parenthesesMatch utils)


#add_executable(generalizedList2 generalizedList2.c)
#target_link_libraries(generalizedList2 utils)

#add_executable(generalizedList generalizedList.c)
#target_link_libraries(generalizedList utils)

add_executable(calculator calculator.c)
target_link_libraries(calculator utils)

add_executable(addPoly addPoly.c)
target_link_libraries(addPoly utils)

add_executable(decimalToBinary decimalToBinary.c)
target_link_libraries(decimalToBinary utils)
